 * Registing via email now logs you on confirm
 * Add user now only appears for people with the correct permission.

2006-11-10 cjg
 * Public saved searches (including export)

2006-11-10 cjg
 * Fixed bug in EPrint screen header which meant the thing always thought
    people were an editor.
 * ditto for EPrint::View
 * Titles of EPrint Screens are now in the actual title.

2006-11-12 cjg
 * Fixed bug in looking for .head files in static pages using the dynamic
    template.
 * links in views no longer place the count inside the anchor.
 * Render toolbox now has title as optional.
 * Added "set-password" priv.
 * Made much of the site centred. Addded ep_block class which is a centered
    block, the contents of which is left aligned.
 * Fixed bug in new user - it registered the action when it should have been
    the screen itself that was linked.
 * Removed dupicated sub def. in SavedSearch.
 * Fixed bug in reset_password

2006-11-13 cjg
 * Fixed typo in Session
 * Added flag to citations to indicate if they should be placed in a table
    or not. Used this in paginate and latest.
 * Added ep_block to EPrint::Remove and EPrint::View::Owner
 * Removed RSS code from latest_tool.
 * Fixed example code in document_upload.
 
2006-11-13 cjg
 * Cleaned up style on login page.
 * Login page now focuses on first input field.
 * Cleaned up default information.html page.

2006-11-13 cjg
 * Renamed $eprint->has_editor to $eprint->in_editorial_scope_of to 
    avoid semantic confusion. 
 * Ordervalues of pagerange fixed.

2006-11-13 cjg
 * DROP TABLE now only drops tables which exist.
 * All drop tables now go via $db->drop_table

2006-11-13 cjg
 * Fixed timestamp in OAI record headers
 * Moved getpwnam into platform module

2006-11-13 cjg
 * Fixed title in latest tool

2006-11-13 moj
 * switched 'an owner' to 'a depositor' in phrases.
 * Lost a block of redundant phrases
 * Fixed typo (cancec->cancel)

2006-11-13 moj
 * Added back compatibility for get_children