@@ -441,6 +441,8 @@ print CONF <<END;
     PerlSetVar EPrints_ArchiveID $repository_id
     Redirect /perl/ http://$host/cgi/
 
+    PerlSetVar EPrints_Dir_SecuredCGI $cgidir/users
+    PerlSetVar EPrints_Dir_Documents $documents_path
 END
 # EPrints log handler (this gets called for all requests, not just
 # mod_perl)
